kubernetes/apps/endurain/app/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: endurain
  namespace: endurain
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: endurain
  template:
    metadata:
      labels:
        app.kubernetes.io/name: endurain
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/arch
                    operator: In
                    values:
                      - amd64
      containers:
        - name: endurain
          image: codeberg.org/endurain-project/endurain:v0.18.1@sha256:d0bc70854f40421bad972bcd280344a94086ad3333c7817b13a7d3e27e24d89b
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              path: /openapi.json
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /openapi.json
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
            capabilities:
              add:
                - CHOWN
                - DAC_OVERRIDE
                - SETGID
                - SETUID
              drop:
                - ALL
          volumeMounts:
            - mountPath: /app/backend/data
              name: data
            - mountPath: /app/backend/logs
              name: logs
          resources:
            requests:
              cpu: 350m
              memory: 650Mi
            limits:
              memory: 650Mi
      restartPolicy: Always
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: endurain
        - name: logs
          emptyDir:
            sizeLimit: 5Gi
