kubernetes/apps/endurain/app/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: endurain
  namespace: endurain
  labels:
    app.kubernetes.io/name: endurain
spec:
  type: ClusterIP
  ports:
    - name: web-ui
      port: 8080
  selector:
    app.kubernetes.io/name: endurain
